--- a/themes/Default/css/screen.css
+++ b/themes/Default/css/screen.css
@@ -67,3 +67,7 @@ body > footer {
 	padding: 15px 20px;
 	margin-top: 60px;
 }
+
+nav .current > a {
+	font-weight: bold;
+}
